// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav/> renders and displays properly if there IS a user 1`] = `
<styled.ul>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      exact={true}
      to="/"
    >
      Explore Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/add"
    >
      Add Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/mine"
    >
      My Photos
    </NavLink>
  </li>
  <li>
    <styled.div
      isUser={true}
      logged="Log Out"
      name="Sarah"
    >
      Hi, 
      Sarah
      !
      <a
        href="/auth/logout"
      >
        Log Out
      </a>
    </styled.div>
  </li>
</styled.ul>
`;

exports[`<Nav/> renders and displays properly if there is not a user 1`] = `
<styled.ul>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      exact={true}
      to="/"
    >
      Explore Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/add"
    >
      Add Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/mine"
    >
      My Photos
    </NavLink>
  </li>
  <li>
    <NavLink
      activeClassName="active"
      aria-current="page"
      to="/logIn"
    >
      Log In
    </NavLink>
  </li>
</styled.ul>
`;
